[package]
name = "geotron"
version = "0.1.0"
authors = ["Juan Vidal <juan.vidal@daliaresearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
reset-router = "0.8"
http = "*"

pretty_env_logger = "0.3"
log = "0.4"